# rest-framework-actions

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
rest_framework_actions/: apps.py  mixins.py  viewsets.py
