[metadata]
name = rest-framework-actions
version = 0.1
description = A DRF app extension to control serializers per action.
long_description = file: README.rst
url = https://github.com/AlexisMunera98/rest-framework-actions
author = John Alexis Munera
author_email = alexismunera98@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0

install_requires =
    djangorestframework>=3.10.0
test_suite = load_tests.get_suite